# bachelor-project

./: README.md
api/: .eslintrc.js  index.ts  package-lock.json  package.json  tsconfig.json
api/data/: generateData.ts
api/measurement_data/: measurements1.csv
api/measurement_data/imageResize/: init_measurements.csv  measurements.csv  measurements_ir.csv
api/measurement_data/jsonToCsv/: init_measurements.csv  measurements1.csv
api/measurement_data/mazeGeneration/: init_measurements.csv  measurements.csv  measurements2.csv
ui/: .env  .gitignore  README.md  index.html  nx.json  package-lock.json  package.json  project.json  vite.config.ts
ui/e2e/: project.json
ui/e2e/src/e2e/: app.cy.ts
ui/scripts/: copy-wasm-files.ps1
ui/src/app/: app.spec.tsx  app.tsx  constants.ts  store.ts
ui/src/app/atoms/: Button.tsx  Cell.tsx  ClickAwayListener.tsx  Dialog.tsx  GameTitle.tsx  IconButton.tsx  Input.tsx  LoadingSpinner.tsx  NavButton.tsx  Player.tsx  ProfileImage.tsx  Select.tsx
ui/src/app/features/: mazeGeneration.js
ui/src/app/hooks/: useGenerateMaze.ts  useInitWasmModule.ts  useJsonToCsv.ts  useResizeImage.ts
ui/src/app/molecules/: DataTable.tsx  Game.tsx  GameMenu.tsx  ImagePicker.tsx  UserProfile.tsx
ui/src/app/network/: getLeaderBoards.ts  postMeasurement.ts
wasm/json-csv/: Cargo.toml
wasm/json-csv/src/: lib.rs
wasm/maze-generation/: Cargo.toml  index.html  index.js
wasm/maze-generation/pkg/: maze_generation.js  maze_generation_bg.wasm  maze_generation_bg.wasm.d.ts  package.json
wasm/maze-generation/src/: lib.rs
wasm/maze-generation/unused/: unused.rs
wasm/resize-image/: Cargo.toml  index.html  index.js  lib_no_logging.rs
wasm/resize-image/src/: lib.rs
(+35 files in other folders)
