[package]
name = "maze-generation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.61"
num-derive = "0.3.3"
num-traits = "0.2.15"
rand = "0.8.5"
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
web-sys = { version = "0.3.61", features = [ "console" ] }
