[package]
name = "resize-image"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.61"
web-sys = { version = "0.3.61", features = [ "console" ] }
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
image = "0.24.6"
base64 = "0.21.0"
chrono = "0.4.24"
